# BamianjingTV

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  Jenkinsfile  Makefile  README.md  docker-compose.cpu.yml  docker-compose.dev.yml  docker-compose.yml  install-rtx50.sh  pyproject.toml  requirements-rtx50.txt  requirements-tts.txt  requirements.txt
backend/: .dockerignore  Dockerfile  Dockerfile.dev  install-rtx50.sh  pyproject.toml  requirements-dubbing.txt  requirements-lipsync.txt  requirements-music.txt  requirements-rtx50.txt  requirements-torch.txt  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  cards.py  channels.py  cleanup.py  creative.py  dubbing.py  export.py  items.py  jobs.py  lofi.py  media.py  memory_books.py  music.py  music_commentary.py  overview.py  pipelines.py  queue.py  scenemind.py  segments.py  sources.py  studio.py  timelines.py  websocket.py
backend/app/models/: __init__.py  card.py  channel.py  creative.py  item.py  job.py  lofi.py  memory_book.py  music.py  music_commentary.py  pipeline.py  source.py  studio.py  timeline.py
backend/app/services/: __init__.py  ambient_library.py  azure_translator.py  card_cache.py  channel_manager.py  cleanup.py  creative_config_generator.py  item_manager.py  job_manager.py  lofi_image_pool.py  lofi_manager.py  memory_book_manager.py  music_commentary_manager.py  music_manager.py  pipeline_manager.py  webhook.py  (+3 more)
backend/data/: pipelines.json
backend/scripts/: test_wikidata.py
backend/tests/: __init__.py  test_api.py  test_api_v2.py
(+280 files in other folders)
