[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hardcore-player"
version = "0.1.0"
description = "Automated video language conversion pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "SceneMind Team"}
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["app"]
